<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NFCShoppingActivity!</string>
    <string name="app_name">NFC购物</string>
    <string name="userName">用户名：</string>
    <string name="rating">评分：</string>
    <string name="comment">评论内容：</string>
    <string name="productName">商品名：</string>
    <string name="productCost">商品价格：</string>
    <string name="privilegeCost">优惠价格：</string>
    <string name="discount">折扣：</string>
    <string name="averageRating">平均得分：</string>
    <string name="btcomment">评论</string>
    <string name="btshare">分享</string>
    <string name="btfinish">完成</string>
    <string name="msg_sure">确认删除全部记录？</string>
    <string name="btOK">确认</string>
    <string name="btCancel">取消</string>
    <string name="btBack">返回</string>
    <string name="btshareandcommit">提交并分享</string>
    <string name="clear_one_concern">删除记录</string>
    <string name="add_to_compare">加入对比</string>
    <string name="btcommit">提交</string>
    <string name="hint">请在此填写评论的详细内容……</string>
    <string name="duration">优惠时间：</string>
    <string name="empty">对不起，您没浏览过任何商品！</string>
    <string name="feedback">请填写您的反馈信息</string>
    <string name="fbconfirm">提交</string>
    <string name="fbcancle">取消</string>
    <string name="reuser1">用户名</string>
    <string name="reuser2">请输入您的用户名</string>
    <string name="repassword1">密　码</string>
    <string name="repeatpassword1">确　认</string>
    <string name="repassword2">请输入您的密码</string>
    <string name="repeatpassword2">请再次输入您的密码</string>
    <string name="reconfirm">提交</string>
    <string name="recancle">取消</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="nodata">暂无数据</string>
    <string name="addtocompare">加入对比</string>
    <string name="checkcomment">查看评论</string>
    <string name="haslogin">已经登录，是否清除\n原账户信息并重新登录？</string>
    <string name="main_concern">关注</string>
    <string name="main_comparation">对比</string>
    <string name="main_collection">收藏</string>
    <string name="main_discount">优惠</string>
    <string name="main_more">更多</string>

</resources>