<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_gravity="center_vertical"
            android:saveEnabled="true"
            android:src="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dip" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productName"
                    android:textColor="#ff333333"
                    android:textSize="15.0sp" />

                <TextView
                    android:id="@+id/tvProductname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="Lee"
                    android:textColor="#ff333333"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productCost"
                    android:textColor="#ff333333"
                    android:textSize="15.0sp" />

                <TextView
                    android:id="@+id/tvproductCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="1000"
                    android:textColor="#ff333333"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:paddingTop="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/averageRating"
                    android:textColor="#ff333333"
                    android:textSize="15.0sp" />

                <RatingBar
                    android:id="@+id/indicator_ratingbar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dip"
                    android:numStars="5"
                    android:rating="3" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right" >

            <CheckBox
                android:id="@+id/cbStar"
                style="?android:attr/starStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="10dip" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/lybuttonBar"
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btFinish"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btfinish" />

            <Button
                android:id="@+id/btComment"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btcomment" />

            <Button
                android:id="@+id/btShare"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btshare" />
        </LinearLayout>

        <include
            android:id="@+id/progress"
            layout="@layout/progress" />

        <ListView
            android:id="@+id/comment_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lybuttonBar"
            android:divider="@drawable/divider_horizontal_timeline"
            android:dividerHeight="1.0dip"
            android:fadingEdge="none" />
    </RelativeLayout>

</LinearLayout>